Added google doodle. Resized all the images to right size and removed width property from css

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,10 +13,10 @@
 }
 
 .apps-icon {
-	width:17px;
 	margin-right: 20px;
 }
 
-.avatar {
-	width:30px;
+/*Doodle*/
+.doodle {
+	margin-top: 100px;
 }
