--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -68,26 +68,36 @@
 
 /* ----- QuickLinks ----- */
 
+/*.quicklinks-top-container {
+	border: 1px solid red;
+	width: 50%;
+	min-width: 410px;
+}*/
+
+
+/*.row {
+	border: 1px black dotted;
+}
+
+.col {
+	border: 1px red dotted;
+}*/
+
 .col-container {
 	margin-bottom: 4px;
+/*	border: 1px solid green;
+*/	display: flex;
+	justify-content: center;
 }
 
 .quicklink-container {
-	width: 113px;
+	width: 100px;
 	height: 113px;
 }
 
-.quicklink-container:hover {
-	background-color: #f4f4f4;
-}
-
-.quicklink-thumbnail-container img {
-	width:50px;
-	padding: 10px;
-	background-color: #e4e4e4;
-}
-
 .quicklink-icon-container {
+	/* Displayed only when the mouse is on top of the parent container*/
+	display: none;
 	text-align: right;
 	margin: 5px 5px 0px 0px;
 }
@@ -96,55 +106,15 @@
 	text-align: center;
 }
 
+.quicklink-thumbnail-container img {
+	width:50px;
+	margin-top: 23px;
+	padding: 10px;
+	background-color: #e4e4e4;
+}
+
 .quicklink-text-container {
 	text-align: center;
-}
-
-
-
-
-
-
-
-
-
-.card-deck-box {
-	width: 65%;
-}
-
-.quicklink-box {
-	width: 113px;
-	height: 113px;
-}
-
-.quicklink-box:hover {
-	background-color: #eee;
-}
-
-/* Image fixed size */
-.quicklink-box img {
-	width:45px;
-	padding: 10px;
-	margin-top: 22px;
-	/*Turn this off if the background has to be highlighted only on hover*/
-	background-color: #ddd;
-}
-
-/*Icon should be displayed only when the mouse hovers the box*/
-.quicklink-options {
-	display: none;
-}
-
-.quicklink-box:hover .quicklink-options {
-	display: block;
-	font-size: 12px;
-	color: #bbb;
-}
-
-.quicklink-box:hover img {
-	margin-top: 0px;
-	/*Turn this on if the background has to be highlighted only on hover*/
-	/*background-color: #ccc;*/
 }
 
 .quicklink-text {
@@ -154,3 +124,20 @@
 	color: #000;
 	text-decoration: none;
 }
+
+/* On Mouse hover */
+.quicklink-container:hover {
+	background-color: #f4f4f4;
+}
+
+.quicklink-container:hover img {
+	margin-top: 0px;
+}
+
+.quicklink-container:hover .quicklink-icon-container {
+	display: block;
+	/* Size and color ot the icon*/
+	font-size: 12px;
+	color: #bbb;
+}
+
