--- a/resources/scss/_config.scss
+++ b/resources/scss/_config.scss
@@ -1,8 +1,12 @@
 // Style sheet variables
 
+ // Fonts
 $font-color: #000;
 $font-stack: 'Segoe UI', 'Roboto', arial, sans-serif;
 
+// Hover 
 $hover-color: #eee;
 
+// Borders and Margins
 $space-between-containers: 25px;
+$border-radius: 30px;
