--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -5,13 +5,16 @@
 // Styles for particular containers
 @import 'navbar';
 @import 'doodle';
+@import 'search';
 
+// Set margin and padding to zero
 * {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 }
 
+// Turn off shadows
 .noshadow {
 	box-shadow: none;
 }
