--- a/resources/scss/_navbar.scss
+++ b/resources/scss/_navbar.scss
@@ -28,10 +28,8 @@
 	// Icon items
 	&-icon-container {
 		@include flex-container();
-
-		border-radius: 50%;
-		width: 40px;
-		height: 40px;
+		// Circular
+		@include circular(40px);
 	}
 
 	&-icon-container:hover {
