--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -6,6 +6,7 @@
 @import 'navbar';
 @import 'doodle';
 @import 'search';
+@import 'quicklinks';
 @import 'customize';
 
 // Set margin and padding to zero
